version/0.18/_sources/api/solver/_autosummary/settings/user_defined_5.rst.txt
:orphan:

.. _user_defined_5:

user_defined
============

.. autoclass:: ansys.fluent.core.solver.settings_232.user_defined_5.user_defined
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`user_defined_child <user_defined_child>`


.. rubric:: Included in:

==============================================   ===============================

Parent                                                                   Summary

==============================================   ===============================
:ref:`report_definitions <report_definitions>`       'report_definitions' child.

==============================================   ===============================

